--- a/index.html
+++ b/index.html
@@ -823,6 +823,9 @@
                 <div class="footer-links-links">
                     <a href="https://hytale.com/" class="footer-link" target="_blank">Hytale官网</a>
                 </div>
+                <div class="footer-links-links">
+                    <a href="https://list.mczfw.cn/" class="footer-link" target="_blank">我的世界服务器查询</a>
+                </div>				
                 <div class="footer-info">
                     <p>
                         <strong>Hytale服务器大全</strong><br>
