--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             overflow-x: auto;
             color: #666666;
             margin: 0 auto !important;
+			background: url(hytale-bg.webp) 0 0 repeat;
+            background-attachment: fixed;
         }
         
         a:link, a:visited {
