--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>Hytale服务器大全 - 实时更新的优质Hytale服务器推荐</title>
+    <title>Hytale服务器大全 - 实时更新的优质Hytale服务器下载</title>
     <base href="https://www.hytaleserver.cn/">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
     <meta name="description" content="最全的Hytale服务器地址列表，汇聚众多Hytale游戏服务器，寻找Hytale服务器IP，帮你快速找到喜欢的Hytale服务器！">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Hytale列表 | 实时更新的优质Hytale服务器推荐">
+    <meta property="og:title" content="Hytale列表 | 实时更新的优质Hytale服务器下载">
     <meta property="og:description" content="最新Hytale服务器列表，IP实时更新">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.hytaleserver.cn">
