--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
             font-weight: bold;
             font-size: 14px;
             text-align: center;
+			image-rendering: pixelated;
         }
         
         .loading {
