--- a/index.html
+++ b/index.html
@@ -825,6 +825,7 @@
                 <div class="footer-links-links">
                     <a href="https://hytale.com/" class="footer-link" target="_blank">Hytale官网</a>
                     <a href="https://list.mczfw.cn/" class="footer-link" target="_blank">我的世界服务器查询</a>
+					<a href="https://xz.hytaleserver.cn/" class="footer-link" target="_blank">Hytale中文版下载</a>
                 </div>				
                 <div class="footer-info">
                     <p>
