--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                     <tr>
                         <td>
                             <div class="default-logo">
-                                ${logo ? '<img alt="${ip}" width="50px" src="' + logo + '" style="border-radius: 8px;" onerror="this.style.display=\'none\'; this.parentNode.innerHTML=\'S' + (index + 1) + '\';">' : 'S' + (index + 1)}
+                                ${logo ? '<img alt="服务器图标" width="50px" src="' + logo + '" style="border-radius: 8px;" onerror="this.style.display=\'none\'; this.parentNode.innerHTML=\'S' + (index + 1) + '\';">' : 'S' + (index + 1)}
                             </div>
                         </td>
                         <td>${ip}</td>
